@@ -1,0 +1,4 @@
+from . import load_tests
+import unittest
+
+unittest.main()
